--- a/Ultra/Ultra.theme.css
+++ b/Ultra/Ultra.theme.css
@@ -58,7 +58,7 @@
     --channels-default: #4a4a52;
     --selected-indicator: #97ffa5;
     --hover-indicator: #ffffff;
-    --font: "Lato";
+    --font: "Segoe UI";
     --code-font: "Source Code Pro";
     --boost-bar: none;
 }
